<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Supa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image">drawable/image</string>
    <string name="login">USTC智能超市</string>
    <string name="welcome">WELCOME TO USTC SUPERMARKET</string>
    <string name="ad">广告</string>
    <string name="userlogin">用户登录</string>
    <string name="newuser">新用户注册</string>
    <string name="purchase">选购商品</string>
    <string name="promote">特价商品</string>
    <string name="shopping_car">购物车</string>
    <string name="map">超市平面图</string>
    <string name="username">用户名：</string>
    <string name="input_username">username</string>
    <string name="password">密码：</string>
    <string name="input_password">password</string>
    <string name="check">验证码</string>
    <string name="confirm">确认</string>
    <string name="confirm_password">确认密码</string>
    <string name="input_password_again">password again</string>
    <string name="email_address">邮箱：</string>
    <string name="input_email">email</string>
    <string name="search">搜索商品</string>
    <string name="title_activity_log_in">LogInActivity</string>

</resources>
